[package]
name = "elf-bastille"
version = "1.0.0"
edition = "2018"

[dependencies]
specs = "0.14"
specs-derive = "0.4"
rayon = "1.0"
rand = "0.6"
rand_pcg = "0.1"
glium = { version = "0.23", features = ["icon_loading"] }
imgui = "0.0"
imgui-sys = "0.0"
imgui-glium-renderer = "0.0"
imgui-winit-support = "0.0"
image = "0.21"
